--- a/plugin.yml
+++ b/plugin.yml
@@ -2,4 +2,4 @@ name: DanceFarm
 version: 1.0.0
 main: dancefarm\Main
 api: 5.0.0
-descripcion: plugin que hace crecer a los cultivos en un radio configurable mediante dance 
+descripcion: plugin that if you dance the crops grow!! 
